--- a/index.html
+++ b/index.html
@@ -9,113 +9,133 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header class="page-header">
-        <nav>
-            <a class="link logo-link" href="WebStudio"><span class=" logo-accent">Web</span>Studio</a>
-            <ul class="list menu-nav">
-                <li><a href="Студия" class="link link-current">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="Контакты" class="link">Контакты</a></li>
+        <div class="container">
+            <nav class="main-nav">
+                <a class="link logo-link" href="WebStudio"><span class=" logo-accent">Web</span>Studio</a>
+                <ul class="list menu-nav header-container">
+                    <li class="item menu-nav"><a href="Студия" class="link link-current item-link">Студия</a></li>
+                    <li class="item menu-nav"><a href="./portfolio.html" class="link item-link">Портфолио</a></li>
+                    <li class="item menu-nav"><a href="Контакты" class="link item-link">Контакты</a></li>
 
-            </ul>
-        </nav>
-        <ul class="list site-nav">
-            <li><a class="link mail-link" href="info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link tel-link" href="+380961111111">+38 096 111 1111</a></li>
-        </ul>
+                </ul>
+                <ul class="list site-nav header-container">
+                    <li class="item site-nav "><a class="link mail-link item-link"
+                            href="info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="item site-nav"><a class="link tel-link item-link" href="+380961111111">+38 096 111
+                            1111</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
-        <div>
-            <section class="hero">
+        <section class="hero section">
+            <div class="container hero-container">
                 <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
                 <button class="main-button" type="button">Заказать услугу</button>
-            </section>
+        </section>
         </div>
         <section class="section-bg">
-            <h2 class="section-title">Особенности</h2>
-
-            <ul class="list features-list">
-                <li>
-                    <h3 class="section-title">Внимание к деталям</h3>
-                    <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию
-                        позиции.</p>
-                </li>
-                <li>
-                    <h3 class="section-title">Пунктуальность</h3>
-                    <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров влечет за
-                        собой.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="section-title">Планирование</h3>
-                    <p class="section-text">Равным образом консультация с широким активом в значительной степени
-                        обуславливает.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="section-title">Современные технологии</h3>
-                    <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                    </p>
-                </li>
-            </ul>
+            <div class="container section">
+                <h2 class="section-title visually-hidden">Особенности</h2>
+                <ul class="list features-list">
+                    <li class="item-list">
+                        <h3 class="section-title">Внимание к деталям</h3>
+                        <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию
+                            позиции.</p>
+                    </li>
+                    <li class="item-list">
+                        <h3 class="section-title">Пунктуальность</h3>
+                        <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров
+                            влечет за
+                            собой.
+                        </p>
+                    </li>
+                    <li class="item-list">
+                        <h3 class="section-title">Планирование</h3>
+                        <p class="section-text">Равным образом консультация с широким активом в значительной степени
+                            обуславливает.
+                        </p>
+                    </li>
+                    <li class="item-list">
+                        <h3 class="section-title">Современные технологии</h3>
+                        <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых
+                            заданий.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
-
         <section class="section">
-            <h2 class="section-title">Чем мы занимаемся</h2>
-            <ul class="list box-list">
-                <li> <img src="./images/img.jpg" alt="декстопные приложения" width="370"></li>
-                <li> <img src="./images/img1.jpg" alt="мобильные приложения" width="370"></li>
-                <li> <img src="./images/img2.jpg" alt="дизайнерские решения" width="370"></li>
-            </ul>
+            <div class="container">
+                <h2 class="section-subtitle">Чем мы занимаемся</h2>
+                <ul class="list box-list">
+                    <li class="item-list"> <img src="./images/img.jpg" alt="декстопные приложения" width="370"></li>
+                    <li class="item-list"> <img src="./images/img1.jpg" alt="мобильные приложения" width="370"></li>
+                    <li class="item-list"> <img src="./images/img2.jpg" alt="дизайнерские решения" width="370"></li>
+                </ul>
+            </div>
         </section>
-
         <section class="section-team">
-            <h2 class="section-title">Наша команда</h2>
-            <ul class="list team-list">
-                <li>
-                    <img src="./images/igde.jpg" alt="член команды Игорь Демьяненко" width="270">
-                    <h3 class="section-title-name"> Игорь Демьяненко</h3>
-                    <p class="section-team-tx">Product Designer</p>
-                </li>
+            <div class="container">
+                <h2 class="section-subtitle">Наша команда</h2>
+                <ul class="list team-list">
+                    <li class="item-list">
+                        <img src="./images/igde.jpg" alt="член команды Игорь Демьяненко" width="270">
+                        <div class="card-member">
+                            <h3 class="section-title-name"> Игорь Демьяненко</h3>
+                            <p class="section-team-tx">Product Designer</p>
+                        </div>
+                    </li>
 
-                <li>
-                    <img src="./images/olre.jpg" alt="член команды Ольга Репина" width="270">
-                    <h3 class="section-title-name">Ольга Репина</h3>
-                    <p class="section-team-tx">Frontend Developer</p>
-                </li>
+                    <li class="item-list">
+                        <img src="./images/olre.jpg" alt="член команды Ольга Репина" width="270">
+                        <div class="card-member">
+                            <h3 class="section-title-name">Ольга Репина</h3>
+                            <p class="section-team-tx">Frontend Developer</p>
+                        </div>
+                    </li>
 
-                <li>
-                    <img src="./images/ntar.jpg" alt="член команды Николай Тарасов" width="270">
-                    <h3 class="section-title-name">Николай Тарасов</h3>
-                    <p class="section-team-tx">Marketing</p>
-                </li>
+                    <li class="item-list">
+                        <img src="./images/ntar.jpg" alt="член команды Николай Тарасов" width="270">
+                        <div class="card-member">
+                            <h3 class="section-title-name">Николай Тарасов</h3>
+                            <p class="section-team-tx">Marketing</p>
+                        </div>
+                    </li>
 
-                <li>
-                    <img src="./images/mer.jpg" alt="член команды Михаил Ермаков" width="270">
-                    <h3 class="section-title-name">Михаил Ермаков</h3>
-                    <p class="section-team-tx">UI Designer</p>
-                </li>
-            </ul>
-
+                    <li class="item-list">
+                        <img src="./images/mer.jpg" alt="член команды Михаил Ермаков" width="270">
+                        <div class="card-member">
+                            <h3 class="section-title-name">Михаил Ермаков</h3>
+                            <p class="section-team-tx">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a class="link logo-link-address" href="WebStudio"><span class=" logo-accent">Web</span>Studio</a>
+        <div class="container">
 
-        <address class="address">
+            <a class="link logo-link-address" href="WebStudio"><span class=" logo-accent">Web</span>Studio</a>
+            <div class="footer-container">
+                <address class="address">
 
-            г. Киев, пр-т Леси Украинки, 26 <br>
-            <a class="link email-link" href="mailto:info@example.com">info@example.com <br></a>
-            <a class="link phone-link" href="tel:+380991111111">+380991111111</a>
-        </address>
-
+                    г. Киев, пр-т Леси Украинки, 26 <br>
+                    <a class="link email-link" href="mailto:info@example.com">info@example.com <br></a>
+                    <a class="link phone-link" href="tel:+380991111111">+380991111111</a>
+                </address>
+            </div>
+        </div>
     </footer>
-
 
 </body>
 
