Додає стилі для геометрії (ширини, відступи, поля і рамки) і позиціонує контенту за допомогою Flexbox для сторінок макета

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </section>
         </div>
         <section class="section-bg">
-            <div class="container section">
+            <div class="container section section-bg">
                 <h2 class="section-title visually-hidden">Особенности</h2>
                 <ul class="list features-list">
                     <li class="item-list">
@@ -77,9 +77,9 @@
             <div class="container">
                 <h2 class="section-subtitle">Чем мы занимаемся</h2>
                 <ul class="list box-list">
-                    <li class="item-list"> <img src="./images/img.jpg" alt="декстопные приложения" width="370"></li>
-                    <li class="item-list"> <img src="./images/img1.jpg" alt="мобильные приложения" width="370"></li>
-                    <li class="item-list"> <img src="./images/img2.jpg" alt="дизайнерские решения" width="370"></li>
+                    <li class="box-list"> <img src="./images/img.jpg" alt="декстопные приложения" width="370"></li>
+                    <li class="box-list"> <img src="./images/img1.jpg" alt="мобильные приложения" width="370"></li>
+                    <li class="box-list"> <img src="./images/img2.jpg" alt="дизайнерские решения" width="370"></li>
                 </ul>
             </div>
         </section>
