--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="section-portfolio">
             <div class="container">
                 <ul class="list button-list">
                     <li class="btn"><button class="button button-current" type="button">Все</button></li>
