Додає стилі для геометрії і позиціонує контент

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </section>
         </div>
         <section class="section-bg">
-            <div class="container section section-bg">
+            <div class="container">
                 <h2 class="section-title visually-hidden">Особенности</h2>
                 <ul class="list features-list">
                     <li class="item-list">
